--- a/views/pages/partials/navbar.ejs
+++ b/views/pages/partials/navbar.ejs
@@ -20,8 +20,8 @@
             </div>
             <div class="menuDiv hidden flex flex-col  z-40 h-screen top-0 right-0 bg-[#1f1f1f] items-start justify-start pt-28 pr-28 pl-12 gap-5 absolute md:relative top-3">
                 <a href="/" class="text-gray-500 text-xl border-b border-gray-800 pb-2 w-full">Home</a>
-                <a href="http://localhost:8800/#about" class="text-gray-500 text-xl border-b border-gray-800 pb-2 w-full">About</a>
-                <a href="#howitworks" class="text-gray-500 text-xl border-b border-gray-800 pb-2 w-full">How it Works</a>
+                <a href="https://nairacity.herokuapp.com/#about" class="text-gray-500 text-xl border-b border-gray-800 pb-2 w-full">About</a>
+                <a href="https://nairacity.herokuapp.com/#howitworks" class="text-gray-500 text-xl border-b border-gray-800 pb-2 w-full">How it Works</a>
                 <a href="login" class="text-gray-500 text-xl border-b border-gray-800 pb-2 w-full loginBtn">Login</a>
                 <a href="register"><button class="dlbtn p-2 rounded-full px-7 regBtn">Register</button></a>
                 <a href="dashboard"><button class="dlbtn p-2 rounded-full px-7 dashBtn hidden">Dashboard</button></a>
@@ -36,8 +36,8 @@
                     <img src="/public/img/newLogo.png" class="h-10" alt="">
                 </a>
                 <a href="/" class="text-gray-500 text-xl">Home</a>
-                <a href="http://localhost:8800/#about" class="text-gray-500 text-xl">About</a>
-                <a href="#howitworks" class="text-gray-500 text-xl">How it works</a>
+                <a href="https://nairacity.herokuapp.com/#about" class="text-gray-500 text-xl">About</a>
+                <a href="https://nairacity.herokuapp.com/#howitworks" class="text-gray-500 text-xl">How it works</a>
                 <a href="login" class="text-gray-500 text-xl loginBtn2">Login</a>
             </div>
             <div>
