--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -3,8 +3,8 @@
         <div class="flex flex-col items-center justify-center gap-5">
             <div class="flex items-center justify-center gap-5">
                 <a href="/"><p class="text-lg border-b border-gray-800 text-gray-500">NairaCity</p></a>
-                <a href="#about"><p class="text-lg border-b border-gray-800 text-gray-500">About</p></a>
-                <a href="#howitworks"><p class="text-lg border-b border-gray-800 text-gray-500">How it Works</p></a>
+                <a href="https://nairacity.herokuapp.com/#about"><p class="text-lg border-b border-gray-800 text-gray-500">About</p></a>
+                <a href="https://nairacity.herokuapp.com/#howitworks"><p class="text-lg border-b border-gray-800 text-gray-500">How it Works</p></a>
             </div>
             <img src="/public/img/newLogo.png" alt="logo" class="w-28 mx-auto hs-10">
         </div>
@@ -13,8 +13,17 @@
                 <p class='text-gray-500'>Privacy policy</p>
                 <p class="text-gray-500">&copy 2021 Blockshi</p>
             </div>
-            <a href="#" class="mx-auto w-full"><p class="dlbtn text-center p-4 rounded-full">Get Started</p></a>
+            <a class="mx-auto w-full startBtn2"><p class="dlbtn text-center p-4 rounded-full">Get Started</p></a>
         </div>
     </div>
     <p class="text-gray-500 text-center my-10"> Designed & Developed by NairaCity Technologies Ltd All Rights Reserved</p>
+
+    <script>
+        const startBtn = document.querySelector('.startBtn2');
+        if(user){
+            startBtn.href = '/dashboard';
+        } else {
+            startBtn.href = '/register';
+        }
+    </script>
 </footer>
