--- a/views/pages/partials/dashnav.ejs
+++ b/views/pages/partials/dashnav.ejs
@@ -11,4 +11,11 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
         </svg>
     </div>
+
+    <script>
+        const validUser = localStorage.getItem('user');
+        if(!validUser){
+            window.location.href = '/register';
+        }
+    </script>
 </nav>
