--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -16,59 +16,63 @@
                                 <div
                                     class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1 max-w-[900px] mx-auto">
                                     <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider">
-                                        Welcome Ebenezer
+                                        Welcome <span class="fullName"></span>
                                     </h1>
                                     <p class="text-green-100">Enjoy a lot of benefits as a citizen of NairaCity</p>
                                     <div class="greenLine h-[2px] my-5 w-full"></div>
                                     <!-- <p class="text-3xl mb-10 ultra">NGN 6,000</p> -->
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Total Mine: <b>12</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Total Mine: <b class="mineTotal"></b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Mining Balance: <b>6,400 Naira</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Mining Balance: <b class="mineBalance"></b> <b>Naira</b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Mining Balance: <b>6,400 Naira</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Referall Balance: <b class="refBalance"></b> <b>Naira</b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Referall Balance: <b>3,000 Naira</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Total Referalls: <b class="totalRef"></b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Total Referalls: <b>3</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Status: <b class="verified p-2"></b></p>
                                     </div>
-                                    <div class="w-full p-5 flex gap-5 items-center justify-between">
-                                        <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Status: <b class="text-pink-600 p-2">Unverified</b></p>
-                                    </div>
-                                    <div class="w-full p-5 flex gap-5 items-start justify-start">
+                                    <div class="w-full p-5 flex gap-5 items-start justify-start veriyParent">
                                         <div class="greenDot mt-3"></div>
-                                        <form class="flex flex-col w-full items-start">
-                                            <p class="flex-1 font-semibold text-lg">Verify Account (Enter Coupon Code): </p> 
-                                            <input type="text" name="accountNumber" placeholder="Enter an active account Number" class="outline-none rounded-md w-[95%] max-w-[800px] p-2 border-b border-green-700 bg-transparent" >
-                                            <button class="greenBtn shadow-md shadow-green-700 py-2 rounded-md px-10 font-bold text-md tracking-wide my-2 block ">Verify</button>
+                                        <form class="verifyForm flex flex-col w-full items-start">
+                                            <p class="flex-1 font-semibold text-lg apiError"></p> 
+                                            <p class="flex-1 font-semibold text-lg ">Verify Account (Enter Coupon Code): </p> 
+                                            <input type="text" name="accountNumber" placeholder="Enter the coupon code you bouught from our vendor" class="outline-none rounded-md w-[95%] max-w-[800px] p-2 border-b border-green-700 bg-transparent verifyInput" >
+                                            <button type="submit" class="greenBtn shadow-md shadow-green-700 py-2 rounded-md px-10 font-bold text-md tracking-wide my-2 block verifyBtn">Verify</button>
                                         </form>
                                     </div>
                                 </div>
                                 <div
                                     class="border border-gray-800 rounded-md bg-black p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1 max-w-[900px] mx-auto">
-                                    <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider">
+                                    <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center">
                                         NairaCity Mining Engine
                                     </h1>
                                     <p class="text-green-100 text-center">Our AI bot trades your money on the background
                                         <br> and returns
                                         profit
                                         every 24 Hours</p>
-                                    <img src="/public/img/minemine.gif" class="w-[300px] object-contain" alt="">
-                                    <p class="text-sm text-center font-bold">Mining...</p>
-                                    <div>
+                                    <img src="/public/img/minemine.gif" class="hidden w-[300px] object-contain mineGIf" alt="">
+                                    <img src="/public/img/oops.png" class="w-[300px] object-contain oops mineGIf" alt="">
+                                    <p class="text-sm text-center font-bold hidden mining">Mining...</p>
+                                    <div class="hidden minemineParent">
                                         <p class="text-green-500 font-bold text-center text-lg mt-5">Total amount mined:
                                         </p>
-                                        <p class="bg-gray-400 py-3 px-20 rounded-md text-black ultra text-2xl">NGN3,500
+                                        <p class="bg-gray-400 py-3 px-20 rounded-md text-black ultra text-2xl">NGN <span class="boldMineBal"></span>
+                                        </p>
+                                    </div>
+                                    <div class="buyCoup">
+                                        <p class="text-green-500 font-bold text-center text-lg mt-5">Verify your account to start mining
+                                        </p>
+                                        <p class="text-gray-100 text-md font-semibold text-center mx-5">Buy a coupon code from our vendor and enter it in your dashboard to verify your account, <a href="deposit" class="text-green-800 border-b border-green-800">click here</a> to buy a coupon code for any package.
                                         </p>
                                     </div>
                                 </div>
@@ -78,7 +82,7 @@
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
                                             <p class="text-gray-200 font-bold text-xl">Mining Balance</p>
-                                            <p class="ultra text-2xl text-gray-400">NGN 3,500</p>
+                                            <p class="ultra text-2xl text-gray-400">NGN <span class="xminingBalance">0</span></p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                     </div>
@@ -86,7 +90,7 @@
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
                                             <p class="text-gray-200 font-bold text-xl">Referral Balance</p>
-                                            <p class="ultra text-2xl text-gray-400">NGN 800</p>
+                                            <p class="ultra text-2xl text-gray-400">NGN <span class="xrefBalance"></span></p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                     </div>
@@ -94,7 +98,7 @@
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
                                             <p class="text-gray-200 font-bold text-xl">Total Referral</p>
-                                            <p class="ultra text-2xl text-gray-400">3</p>
+                                            <p class="ultra text-2xl text-gray-400 xtotalRef"></p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                     </div>
@@ -102,7 +106,7 @@
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
                                             <p class="text-gray-200 font-bold text-xl">Total Amount Withdrawn</p>
-                                            <p class="ultra text-2xl text-gray-400">NGN 3,000</p>
+                                            <p class="ultra text-2xl text-gray-400">0</p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                     </div>
@@ -110,11 +114,13 @@
                                 <div
                                     class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex flex-col items-center justify-between gap-10 w-full max-w-[700px] mx-auto">
                                     <p class="text-gray-200 font-bold text-xl">Referral Link</p>
-                                    <p
-                                        class="text-sm text-gray-400 rounded-md border border-green-600 p-2 w-full text-center">
-                                        http://nairacitycom.ng/register?ref=iChris</p>
-                                    <p class="py-2 px-4 rounded-md bg-pink-600 font-bold cursor-pointer">Copy Referall
-                                        Link</p>
+                                    <p class="text-red-400 mt-16 font-semibold text-lg hiddenRef">Your Referall link will appear when you verify your account</p>
+                                    <p class="text-sm text-gray-400 rounded-md border border-green-600 p-2 w-full text-center refLink hidden refUsername">
+                                        
+                                    </p>
+                                    <p class="py-2 px-4 rounded-md bg-pink-600 font-bold cursor-pointer copyBtn hidden">Copy Referall
+                                        Link
+                                    </p>
                                 </div>
                             </div>
                             <div>
@@ -136,23 +142,8 @@
                                                 </tr>
                                             </thead>
                                             <tbody class="tableBody">
-                                                <tr
-                                                    class="border-b hover:bg-opacity-70 bg-opacity-40 bg-gray-800 border-gray-700">
-                                                    <th scope="row"
-                                                        class="px-6 py-4 font-medium text-gray-900 text-white whitespace-nowrap">
-                                                        Mark Rodrugez
-                                                    </th>
-                                                    <td class="px-6 py-4">
-                                                        test@gmail.com
-                                                    </td>
-                                                    <td class="px-6 py-4">
-                                                        <p
-                                                            class="bg-green-600 cursor-pointer text-center py-2 px-4 text-sm max-w-[100px] rounded-md text-white hover:underline">
-                                                            Verified
-                                                        </p>
-                                                    </td>
-                                                </tr>
-                                                <tr
+                                      
+                                                <!-- <tr
                                                     class="border-b hover:bg-opacity-70 bg-opacity-40 bg-gray-800 border-gray-700">
                                                     <th scope="row"
                                                         class="px-6 py-4 font-medium text-gray-900 text-white whitespace-nowrap">
@@ -167,7 +158,7 @@
                                                             Unverified
                                                         </p>
                                                     </td>
-                                                </tr>
+                                                </tr> -->
                                             </tbody>
                                         </table>
                                     </div>
@@ -184,6 +175,10 @@
             </div>
 
             <!-- Javascript codes and links -->
+
+        <script src="/public/js/dashboard.js"></script>
+        <script src="/public/js/maindash.js"></script>
+
     </body>
 
     </html>
