--- a/views/pages/deposit.ejs
+++ b/views/pages/deposit.ejs
@@ -27,10 +27,10 @@
                                     <h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider">Starter Package</h1>
                                     <p class="text-green-100">Mine <b>NGN250</b> Every 24 Hour</p>
                                     <div class="greenLine h-[2px] my-5 w-full"></div>
-                                    <p class="text-3xl mb-10 ultra">NGN 2.000</p>
+                                    <p class="text-3xl mb-10 ultra">NGN 2,000</p>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Mining Amount: <b>250 Naira</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Mining Amount: <b>300 Naira</b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
@@ -38,7 +38,7 @@
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Auto Mining: Enabled</p>
+                                        <p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
                                     </div>
                                     <a href="#">
                                         <button
@@ -55,7 +55,7 @@
                                     <p class="text-3xl mb-10 ultra">NGN 4,000</p>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Mining Amount: <b>500 Naira</b></p>
+                                        <p class="flex-1 font-semibold text-lg">Mining Amount: <b>600 Naira</b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Auto Mining: Enabled</p>
+                                        <p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
                                     </div>
                                     <a href="#">
                                         <button
@@ -88,7 +88,7 @@
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Auto Mining: Enabled</p>
+                                        <p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
                                     </div>
                                     <a href="#">
                                         <button
@@ -110,7 +110,7 @@
         </div>
 
         <!-- Javascript codes and links -->
+        <script src="/public/js/dashboard.js"></script>
 
-        <script src="/public/admin/admin.js"></script>
     </body>
     </html>
