--- a/views/pages/editpass.ejs
+++ b/views/pages/editpass.ejs
@@ -13,20 +13,23 @@
                 <div class="mt-10 m-5 min-h-screen">
                     <h1 class="ultra text-4xl text-center mt-12 text-green-500">Update Password</h1>
                     <div class="w-full flex items-center justify-center my-10">
-                        <form class=" flex flex-col items-center justify-center gap-5 w-[97%] max-w-[700px] mx-auto">
+                        <form class="form flex flex-col items-center justify-center gap-5 w-[97%] max-w-[700px] mx-auto">
+                            <h1 class="text-center text-lg hidden font-bold text-red-500 mismatch">Passwords does not match</h1>
+                            <h1 class="text-center text-lg hidden font-bold text-red-500 apiError"></h1>
+                            <h1 class="text-center text-lg hidden font-bold text-green-500 success"></h1>
                             <div class="flex flex-col gap-1 items-start justify-center w-full">
                                 <label class="font-semibold text-lg text-gray-200">Old Password</label>
-                                <input required type="password" placeholder="Enter correct old password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
+                                <input required type="password" placeholder="Enter correct old password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent oldPass">
                             </div>
                             <div class="flex flex-col gap-1 items-start justify-center w-full">
                                 <label class="font-semibold text-lg text-gray-200">New Password</label>
-                                <input required type="password" placeholder="Enter a new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
+                                <input required type="password" placeholder="Enter a new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent newPass">
                             </div>
                             <div class="flex flex-col gap-1 items-start justify-center w-full">
                                 <label class="font-semibold text-lg text-gray-200">Confirm Password</label>
-                                <input required type="password" placeholder="confirm new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
+                                <input required type="password" placeholder="confirm new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent confirmPass">
                             </div>
-                            <button class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto">Update</button>
+                            <button type="submit" class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto submit">Update</button>
                         </form>
                     </div>
                 </div>
@@ -39,7 +42,8 @@
         </div>
 
         <!-- Javascript codes and links -->
+        <script src="/public/js/dashboard.js"></script>
+        <script src="/public/js/editPass.js"></script>
 
-        <script src="/public/admin/admin.js"></script>
     </body>
     </html>
