--- a/views/pages/editprofile.ejs
+++ b/views/pages/editprofile.ejs
@@ -13,28 +13,26 @@
                 <div class="mt-10 m-5 min-h-screen">
                     <h1 class="ultra text-4xl text-center mt-12 text-green-500">My Profile</h1>
                     <div class="w-full flex items-center justify-center my-10">
-                        <form class=" flex flex-col items-center justify-center gap-5 w-[97%] max-w-[700px] mx-auto">
+                        <form class="form flex flex-col items-center justify-center gap-5 w-[97%] max-w-[700px] mx-auto">
+                            <h1 class="text-center text-lg hidden font-bold text-red-500 apiError"></h1>
+                            <h1 class="text-center text-lg hidden font-bold text-green-500 success"></h1>
                             <div class="flex flex-col gap-1 items-start justify-center w-full">
                                 <label for="email" class="font-semibold text-lg text-gray-200">E-mail</label>
-                                <input required type="email" name="email" placeholder="Enter a Valid Email" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
+                                <input required type="email" name="email" placeholder="Enter a Valid Email" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent email">
+                            </div>
+                            <div class="flex flex-col gap-1 items-start justify-center w-full">
+                                <label class="font-semibold text-lg text-gray-200">Username</label>
+                                <input required type="text" placeholder="Enter a Valid Email" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent email username">
                             </div>
                             <div class="flex flex-col gap-1 items-start justify-center w-full">
                                 <label for="fullName" class="font-semibold text-lg text-gray-200">Full Name</label>
-                                <input required type="text" name="fullName" placeholder="Enter your Full Name" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
+                                <input required type="text" name="fullName" placeholder="Enter your Full Name" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent fullName">
                             </div>
                             <div class="flex flex-col gap-1 items-start justify-center w-full">
                                 <label for="fullName" class="font-semibold text-lg text-gray-200">Mobile Number</label>
-                                <input required type="text" name="fullName" placeholder="Enter your Mobile Number" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
+                                <input required type="text" name="fullName" placeholder="Enter your Mobile Number" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent number">
                             </div>
-                            <div class="flex flex-col gap-1 items-start justify-center w-full">
-                                <label for="newPassword" class="font-semibold text-lg text-gray-200">Password</label>
-                                <input required type="password" name="newPassword" placeholder="Create a new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
-                            </div>
-                            <div class="flex flex-col gap-1 items-start justify-center w-full">
-                                <label for="confirmPassword" class="font-semibold text-lg text-gray-200">Confirm Password</label>
-                                <input required type="password" name="confirmPassword" placeholder="Confirm password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent">
-                            </div>
-                            <button class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto">Update</button>
+                            <button class="submit greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto">Update</button>
                         </form>
                     </div>
                 </div>
@@ -48,6 +46,7 @@
 
         <!-- Javascript codes and links -->
 
-        <script src="/public/admin/admin.js"></script>
+        <script src="/public/js/dashboard.js"></script>
+        <script src="/public/js/editprofile.js"></script>
     </body>
     </html>
