--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -144,7 +144,7 @@
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Auto Mining: Enabled</p>
+					<p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
 				</div>
 				<a href="#">
 					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
@@ -167,7 +167,7 @@
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Auto Mining: Enabled</p>
+					<p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
 				</div>
 				<a href="#">
 					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
@@ -190,7 +190,7 @@
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Auto Mining: Enabled</p>
+					<p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
 				</div>
 				<a href="#">
 					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
