--- a/views/pages/partials/dashside.ejs
+++ b/views/pages/partials/dashside.ejs
@@ -69,14 +69,31 @@
             </div>
         </a>
         <!-- Log Out -->
-        <a href="#" class="logout">
-            <div class="flex items-center justify-start m-2 gap-5 hover:border-b border-green-800 px-2 py-5">
+        <p class="logout">
+            <div class="logOutOut flex items-center justify-start m-2 gap-5 hover:border-b border-green-800 px-2 py-5">
                 <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
                 </svg>
                     <p class="text-sm font-bold">Log Out</p>
             </div>
-        </a>
+        </p>
     </div>
+    <script>
+            
+        const logOutBtn =  document.querySelector(".logOutOut");
+
+        const logOutFunction = () => {
+            // confirm("Are you sure you want to log out?");
+            if(confirm("Are you sure you want to log out?")){
+            localStorage.removeItem("user");
+            window.location.href = "login";
+            } else {
+                return;
+            }
+        }
+
+        logOutBtn.addEventListener("click", logOutFunction);
+
+    </script>
 </section>
