--- a/views/pages/withdraw.ejs
+++ b/views/pages/withdraw.ejs
@@ -12,24 +12,25 @@
                     <section class="col-span-4 md:col-span-3 mt-16">
                         <div class="mt-10 m-5 min-h-screen">
                             <h1 class="ultra text-4xl text-green-500 text-center mt-12">Withdraw Fundz</h1>
-                            <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your mining balance until after two weeks of registration, and you should get your funds at least 6 hours after you place withdrawal</p>
+                            <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your mining balance until after two weeks of registration, and you should get your Referral bonus at least 6 hours after you place withdrawal</p>
                             <div class="mb-5">
                                 <div class="flex items-center justify-center flex-col my-10 gap-5">
                                     <div class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 w-full max-w-[800px] mx-auto">
                                         <div class="flex items-center justify-between gap-10">
                                             <div class="space-y-2">
                                                 <p class="text-gray-200 font-bold text-xl">Referral Balance</p>
-                                                <p class="ultra text-2xl text-gray-400">NGN 3,000</p>
+                                                <p class="ultra text-2xl text-gray-400 refBalance"></p>
                                             </div>
                                             <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                         </div>
-                                        <p class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 w-full mx-auto text-center max-w-[600px] mt-10 cursor-pointer animate-pulse">Place withdrawal</p>
+                                        <p class="withdrwBtn greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 w-full mx-auto text-center max-w-[600px] mt-10 cursor-pointer animate-pulse hidden">Place withdrawal</p>
+                                        <p class="referrBtn greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-sm tracking-wide my-5 w-full mx-auto text-center max-w-[600px] mt-10 cursor-pointer animate-pulse hidden">Start Referring your friends and earn #1,000 on each Referral</p>
                                     </div>
                                     <div class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 w-full max-w-[800px] mx-auto">
                                         <div class="flex items-center justify-between gap-10">
                                             <div class="space-y-2">
                                                 <p class="text-gray-200 font-bold text-xl">Mining Balance </p>
-                                                <p class="ultra text-2xl text-gray-400">NGN 2,500</p>
+                                                <p class="ultra text-2xl text-gray-400 mineBalance"></p>
                                             </div>
                                             <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                         </div>
@@ -48,7 +49,29 @@
 
             <!-- Javascript codes and links -->
 
-            <script src="/public/admin/admin.js"></script>
+            <script src="/public/js/dashboard.js"></script>
+            <script>
+
+                const refs = JSON.parse(localStorage.getItem('ref'));
+                const mine = JSON.parse(localStorage.getItem('mine'));
+
+                const withdrwBtn = document.querySelector('.withdrwBtn');
+                const referrBtn = document.querySelector('.referrBtn');
+
+                document.querySelector('.refBalance').innerHTML = "NGN " + (refs.length * 1000).toLocaleString();                
+                document.querySelector('.mineBalance').innerHTML = "NGN " + mine.balance.toLocaleString();
+
+                if(refs.length == 0){
+                    referrBtn.classList.remove("hidden")
+                    withdrwBtn.classList.add("hidden")
+                } else {
+                    referrBtn.classList.add("hidden")
+                    withdrwBtn.classList.remove("hidden")
+                }
+
+
+            </script>
+        
     </body>
 
     </html>
