--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,31 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelRecruit - Admin</title>
-    <script src="/public/js/tailwind.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
-    <style>
-        .alumni {
-            font-family: 'Permanent Marker', cursive;
-        }
-    </style>
-</head>
+<%- include('partials/adminheader.ejs') %>
+
+
 <body class="relative">
     <!-- Nav Section -->
     <nav class="bg-gray-100 border-b shadow border-gray-50 p-5 fixed w-full z-50 flex items-center justify-between md:block">
-      <h1 class="text-green-500 alumni text-2xl md:text-3xl">TravelRecruit - Admin</h1>
+    <h1 class="text-green-500 alumni text-2xl md:text-3xl">NairaCity - Admin</h1>
   </nav>
         <!-- Main Section -->
         <section class="flex flex-col items-center justify-center gap-5 pt-20 w-[95%] max-w-[700px] mx-auto">
             <h1 class="text-gray-700 text-3xl text-center my-10">Log In</h1>
             <div class="p-4 border rounded-md border-gray-200 shadow-md w-full">
-                <form class="space-y-5 py-5 form w-full bg-white">
+                <form class="space-y-5 py-5 form w-full">
                     <div class="space-y-2">
                       <p class="text-md font-bold text-gray-500 tracking-wider">
                         Email
@@ -33,7 +19,7 @@
                       <input
                         required
                         type="email"
-                        class="border-b outline-none w-full placeholder:opacity-70 placeholder:text-md border-gray-400 email"
+                        class="bg-transparent border-b outline-none w-full placeholder:opacity-70 placeholder:text-md border-gray-400 email"
                       />
                     </div>
                     <div class="space-y-2">
@@ -43,7 +29,7 @@
                       <input
                         required
                         type="password"
-                        class="border-b outline-none w-full placeholder:opacity-70 placeholder:text-md border-gray-400 password"
+                        class="bg-transparent border-b outline-none w-full placeholder:opacity-70 placeholder:text-md border-gray-400 password"
                       />
                     </div>
                     <button
@@ -56,6 +42,8 @@
             </div>
         </section>
 
-<script src="/public/admin/login.js"></script>
+        <!-- Javascript links and codes -->
+        <script src="/public/js/baseUrl.js"></script>  
+        <script src="/public/admin/login.js"></script>
 </body>
 </html>
