--- a/views/admin/thisuser.ejs
+++ b/views/admin/thisuser.ejs
@@ -1,126 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelRecruit - Admin</title>
-    <script src="/public/js/tailwind.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
-    <style>
-        .alumni {
-            font-family: 'Permanent Marker', cursive;
-        }
-        .inputfile {
-            display: none;
-        }
-        .circle {
-            border-radius: 50%
-        }
-    </style>
-</head>
+<%- include('partials/adminheader.ejs') %>
+
+
 <body class="relative">
     <!-- Nav Section -->
-    <nav class="bg-gray-100 border-b shadow border-gray-50 p-5 fixed w-full z-50 flex items-center justify-between md:block">
-        <h1 class="text-green-500 alumni text-2xl md:text-3xl">TravelRecruit - Admin</h1>
-        <div class="md:hidden menu">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-            </svg>
-        </div>
-        <div class="hidden cancel md:hidden">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-            </svg>
-        </div>
-    </nav>
+
+    <%- include('partials/adminnav.ejs') %>
 
     <div class=" overflow-x-hidden grid grid-cols-4">
 
         <!-- SideBar -->
-        <section class="hidden md:block z-10 col-span-1 border-r border-green-200 bg-gray-100 min-h-screen h-full pt-28 sidebar">
-            <div>
-                <!-- Dashboard -->
-                <a href="/admin">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 10h18M3 14h18m-9-4v8m-7 0h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
-                        </svg>
-                        <p class="text-sm font-bold text-gray-600">Dashboard</p>
-                    </div>
-                </a>
-                <!-- Users -->
-                <a href="/admin/users">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z">
-                            </path>
-                        </svg>
-                            <p class="text-sm font-bold text-gray-600">Users</p>
-                    </div>
-                </a>
-                <!-- WORKS -->
-                <a href="/admin/works">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                            </path>
-                        </svg>
-                            <p class="text-sm font-bold text-gray-600">Works</p>
-                    </div>
-                </a>
-                <!-- ADD WORKS -->
-                <a href="/admin/addwork">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z">
-                            </path>
-                        </svg>
-                            <p class="text-sm font-bold text-gray-600">Add Work</p>
-                    </div>
-                </a>
-                <!-- EDIT PASSWORD -->
-                <a href="/admin/password">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-                        </svg>
-                            <p class="text-sm font-bold text-gray-600">Edit Password</p>
-                    </div>
-                </a>
-                <!-- EDIT EMAIL -->
-                <a href="/admin/email">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4">
-                            </path>
-                        </svg>
-                            <p class="text-sm font-bold text-gray-600">Edit Email</p>
-                    </div>
-                </a>
-                <!-- Log Out -->
-                <a href="#" class="logout">
-                    <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
-                        <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
-                        </svg>
-                            <p class="text-sm font-bold text-gray-600">Log Out</p>
-                    </div>
-                </a>
-            </div>
-        </section>
+        <%- include('partials/adminside.ejs') %>
 
         <!-- Main Section -->
         <section class="col-span-4 md:col-span-3 mt-24 relative">
@@ -134,10 +24,6 @@
                         An error occured
                       </h1>
                     <div class="flex flex-col gap-5 max-w-[900px] space-x-5">
-                        <!-- Displays Image When selected -->
-                        <!-- <div class="relative bg-gray-100 p-5 col-span-2 w-full min-h-[250px] max-w-[500px] flex flex-col items-center justify-center withPicture">
-                            <img class="rounded-sm object-contain h-full w-full max-h-[250px] picImg" alt="" />
-                        </div> -->
                         <!-- Main Form -->
                         <div class="col-span-3 space-y-5 py-5 mb-10 form">
                             <div class="space-y-2">
@@ -145,34 +31,6 @@
                                 Full Name
                               </p>
                               <p class="border-b outline-none w-full border-gray-400 name"
-                              ></p>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Nationality
-                              </p>
-                              <p class="border-b outline-none w-full border-gray-400 nationality"
-                              ></p>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Date Of Birth
-                              </p>
-                              <p class="border-b outline-none w-full border-gray-400 dob"
-                              ></p>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Work Experience
-                              </p>
-                              <p class="border-b outline-none w-full border-gray-400 work"
-                              ></p>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Highest Education
-                              </p>
-                              <p class="border-b outline-none w-full border-gray-400 education"
                               ></p>
                             </div>
                             <div class="space-y-2">
@@ -191,64 +49,46 @@
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Sex
+                                Account Number
                               </p>
-                              <p class="border-b outline-none w-full border-gray-400 sex"
+                              <p class="border-b outline-none w-full border-gray-400 accNumber"
                               ></p>
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Travel History
+                                Account Name
                               </p>
-                              <p class="border-b outline-none w-full border-gray-400 travel"
+                              <p class="border-b outline-none w-full border-gray-400 accName"
                               ></p>
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                IELTS
+                                Bank Name
                               </p>
-                              <p class="border-b outline-none w-full border-gray-400 ietls"
+                              <p class="border-b outline-none w-full border-gray-400 bankName"
                               ></p>
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Passport Number
+                                Requested Withdrawal
                               </p>
-                              <p class="border-b outline-none w-full border-gray-400 passport"
+                              <p class="border-b outline-none w-full border-gray-400 withdraw"
                               ></p>
                             </div>
                             <div class="space-y-2">
-                              <p class="text-xl font-bold text-center my-10 text-gray-500 tracking-wider">
-                                Passport Image
+                              <p class="text-md font-bold text-gray-500 tracking-wider">
+                                Package Type
                               </p>
-                              <div class="border-b outline-none w-full pb-5 border-gray-400 passportImg flex flex-wrap items-center flex-col justify-center gap-2"
-                              ></div>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-xl font-bold text-center my-10 text-gray-500 tracking-wider">
-                                CV Image
-                              </p>
-                              <div class="border-b outline-none w-full pb-5 border-gray-400 cvImg flex flex-wrap items-center flex-col justify-center gap-2"
-                              ></div>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-xl font-bold text-center my-10 text-gray-500 tracking-wider">
-                                Education certificate
-                              </p>
-                              <div class="border-b outline-none w-full pb-5 border-gray-400 eduImg flex flex-wrap items-center flex-col justify-center gap-2"
-                              ></div>
+                              <p class="border-b outline-none w-full border-gray-400 package"
+                              ></p>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <h1 class="text-center text-xl font-semibold my-5">JOBS APPLIED</h1>
-                <div class="flex items-center justify-center my-10 flex-wrap w-[95%] mx-auto gap-4 jobApplied">
-
+                        <!-- Buttons -->
+                        <div class="w-full flex items-end justify-end mb-10 pr-10">
+                          <button class="btn bg-green-500 p-2 text-white text-lg font-bold rounded-md">Approve Withdrawal</button>
+                        </div>
+                    </div> 
               </div>
-              <div class="flex items-center justify-center my-10 noJob">
-                <p class="text-gray-300 mb-10 font-bold text-2xl ">This User has not applied to any job</p>
-              </div>
-            </div>
         </section>
     </div>
 
