--- a/views/pages/reset.ejs
+++ b/views/pages/reset.ejs
@@ -1,4 +1,5 @@
 
+
   <%- include('partials/header.ejs') %>
 
   <body>
@@ -9,27 +10,23 @@
       <!-- Register Section -->
         <section class="pt-28 flex items-center justify-center">
             <div class="mb-20 p-5">
-                <h1 id="error" class="text-center text-4xl text-green-500 ultra my-10">Enter NairaCity</h1>
+                <h1 id="error" class="text-center text-4xl text-green-500 ultra my-10">Reset Password</h1>
                 <form class="form space-y-5">
                     <h1 class="text-center text-lg hidden font-bold text-red-500 mt-10 apiError"></h1>
                     <div class="flex flex-col gap-1 items-start justify-center">
-                        <label for="email" class="font-semibold text-lg text-gray-200">E-mail</label>
+                        <label for="email" class="font-semibold text-lg text-gray-200">E-mail registered with the account</label>
                         <input required type="email" name="email" placeholder="Enter a Valid Email" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent email">
                     </div>
-                    <div class="flex flex-col gap-1 items-start justify-center">
-                        <label for="newPassword" class="font-semibold text-lg text-gray-200">Password</label>
-                        <input required type="password" name="newPassword" placeholder="Create a new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent password">
-                    </div>
-                    <button type="submit" class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto submit">Login</button>
+                    <button type="submit" class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto submit">Submit</button>
                 </form>
                 <p class="text-gray-200 mt-10 text-md text-center opacity-70">New Member? <a href="register" class="text-green-500 border-b border-green-500">Register</a></p>
-                <p class="text-gray-200 mt-10 text-md text-center opacity-70">Can't Remember Password? <a href="reset" class="text-green-500 border-b border-green-500">Reset</a></p>
+                <p class="text-gray-200 mt-10 text-md text-center opacity-70">Remembered Password? <a href="login" class="text-green-500 border-b border-green-500">Login</a></p>
             </div>
         </section>
   
       <!-- <%- include('partials/footer.ejs') %> -->
       <!-- Javascript codes and links -->
       <script src="/public/js/baseUrl.js"></script>  
-      <script src="/public/js/login.js"></script>  
+      <script src="/public/js/reset.js"></script>  
   </body>
   </html>
