added char link

--- a/views/pages/deposit.ejs
+++ b/views/pages/deposit.ejs
@@ -40,7 +40,7 @@
                                         <div class="greenDot"></div>
                                         <p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
                                     </div>
-                                    <a href="#">
+                                    <a href="https://api.whatsapp.com/send?phone=+2349134534917&text=Hello%2C%20Im%20ready%20to%20become%20a%20verified%20citizen%20of%20NairaCity%2C%20I%20want%20to%20buy%20a%20coupon%20code%20for%20a%Starter%20Package">
                                         <button
                                             class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
                                             Buy Package
@@ -65,7 +65,7 @@
                                         <div class="greenDot"></div>
                                         <p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
                                     </div>
-                                    <a href="#">
+                                    <a href="https://api.whatsapp.com/send?phone=+2349134534917&text=Hello%2C%20Im%20ready%20to%20become%20a%20verified%20citizen%20of%20NairaCity%2C%20I%20want%20to%20buy%20a%20coupon%20code%20for%20a%Special%20Package">
                                         <button
                                             class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
                                             Buy Package
@@ -90,7 +90,7 @@
                                         <div class="greenDot"></div>
                                         <p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
                                     </div>
-                                    <a href="#">
+                                    <a href="https://api.whatsapp.com/send?phone=+2349134534917&text=Hello%2C%20Im%20ready%20to%20become%20a%20verified%20citizen%20of%20NairaCity%2C%20I%20want%20to%20buy%20a%20coupon%20code%20for%20a%Premium%20Package">
                                         <button
                                             class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
                                             Buy Package
