--- a/views/pages/withdraw.ejs
+++ b/views/pages/withdraw.ejs
@@ -12,7 +12,7 @@
                     <section class="col-span-4 md:col-span-3 mt-16">
                         <div class="mt-10 m-5 min-h-screen">
                             <h1 class="ultra text-4xl text-green-500 text-center mt-12">Withdraw Fundz</h1>
-                            <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your mining balance until after two weeks of registration, and you should get your Referral bonus at least 6 hours after you place withdrawal</p>
+                            <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your mining balance until after one month of registration, and you should get your Referral bonus at least 6 hours after you place withdrawal</p>
                             <div class="mb-5">
                                 <div class="flex items-center justify-center flex-col my-10 gap-5">
                                     <div class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 w-full max-w-[800px] mx-auto">
