--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -32,6 +32,9 @@
                                     Requested Withd
                                 </th>
                                 <th scope="col" class="px-6 py-3">
+                                    Verified
+                                </th>
+                                <th scope="col" class="px-6 py-3">
                                     <span class="sr-only">Edit</span>
                                 </th>
                             </tr>
