--- a/views/admin/thisuser.ejs
+++ b/views/admin/thisuser.ejs
@@ -82,10 +82,17 @@
                               <p class="border-b outline-none w-full border-gray-400 package"
                               ></p>
                             </div>
+                            <div class="space-y-2">
+                              <p class="text-md font-bold text-gray-500 tracking-wider">
+                                Amount Withdwrawn
+                              </p>
+                              <p class="amountWith border-b outline-none w-full border-gray-400 package"
+                              ></p>
+                            </div>
                         </div>
                         <!-- Buttons -->
                         <div class="w-full flex items-end justify-end mb-10 pr-10">
-                          <button class="btn bg-green-500 p-2 text-white text-lg font-bold rounded-md">Approve Withdrawal</button>
+                          <button class="approveBtn bg-green-500 p-2 text-white text-lg font-bold rounded-md">Approve Withdrawal</button>
                         </div>
                     </div> 
               </div>
