--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -106,7 +106,7 @@
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
                                             <p class="text-gray-200 font-bold text-xl">Total Amount Withdrawn</p>
-                                            <p class="ultra text-2xl text-gray-400">0</p>
+                                            <p class="ultra text-2xl text-gray-400 amountWithdrawn"></p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                     </div>
