made a lotta changed

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -15,7 +15,7 @@
                             <div class="mb-5">
                                 <div
                                     class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1 max-w-[900px] mx-auto">
-                                    <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider">
+                                    <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center">
                                         Welcome <span class="fullName"></span>
                                     </h1>
                                     <p class="text-green-100">Enjoy a lot of benefits as a citizen of NairaCity</p>
@@ -82,7 +82,7 @@
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
                                             <p class="text-gray-200 font-bold text-xl">Mining Balance</p>
-                                            <p class="ultra text-2xl text-gray-400">NGN <span class="xminingBalance">0</span></p>
+                                            <p class="ultra text-2xl text-gray-400">NGN <span class="xminingBalance"></span></p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                     </div>
