--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,7 +18,7 @@
                     </div>
                     <div class="flex flex-col gap-1 items-start justify-center">
                         <label for="newPassword" class="font-semibold text-lg text-gray-200">Password</label>
-                        <input required type="password" name="newPassword" placeholder="Create a new password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent password">
+                        <input required type="password" name="newPassword" placeholder="Enter your password" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent password">
                     </div>
                     <button type="submit" class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto submit">Login</button>
                 </form>
