--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -10,7 +10,7 @@
         </div>
         <div class="flex flex-col items-center justify-center gap-5">
             <div class="flex items-center justify-center gap-5">
-                <a href="/terms" class='text-gray-500'>Terms of service</a>
+                <a href="/terms" class='text-gray-500 border-b pb-1 border-gray-700'>Terms of service</a>
                 <p class="text-gray-500">&copy 2021 NairaCity</p>
             </div>
             <a class="mx-auto w-full startBtn2"><p class="dlbtn text-center p-4 rounded-full">Get Started</p></a>
