--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -62,12 +62,16 @@
                                         every 24 Hours</p>
                                     <img src="/public/img/minemine.gif" class="hidden w-[300px] object-contain mineGIf" alt="">
                                     <img src="/public/img/oops.png" class="w-[300px] object-contain oops mineGIf" alt="">
+                                    <img src="/public/img/power.jpg" class="hidden w-[300px] object-contain oops power cursor-pointer" alt="">
                                     <p class="text-sm text-center font-bold hidden mining">Mining...</p>
+                                    <p class="mine24 text-gray-100 text-md font-semibold text-center mx-5 hidden">Click to start mining for the next 24 hours
+                                    </p>
                                     <div class="hidden minemineParent">
                                         <p class="text-green-500 font-bold text-center text-lg mt-5">Total amount mined:
                                         </p>
                                         <p class="bg-gray-400 py-3 px-20 rounded-md text-black ultra text-2xl">NGN <span class="boldMineBal"></span>
                                         </p>
+                                        
                                     </div>
                                     <div class="buyCoup">
                                         <p class="text-green-500 font-bold text-center text-lg mt-5">Verify your account to start mining
