--- a/views/admin/partials/adminside.ejs
+++ b/views/admin/partials/adminside.ejs
@@ -59,6 +59,42 @@
                     <p class="text-sm font-bold text-gray-600 cursor-pointer premium">Gen PREMIUM</p>
             </div>
         </p>
+        <!-- Generate Pro Coupon -->
+        <p>
+            <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
+                <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z">
+                    </path>
+                </svg>
+                    <p class="text-sm font-bold text-gray-600 cursor-pointer pro">Gen PRO</p>
+            </div>
+        </p>
+        <!-- Generate Lite Coupon -->
+        <p>
+            <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
+                <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z">
+                    </path>
+                </svg>
+                    <p class="text-sm font-bold text-gray-600 cursor-pointer lite">Gen lite</p>
+            </div>
+        </p>
+        <!-- Generate XLite Coupon -->
+        <p>
+            <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
+                <svg class="h-7 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z">
+                    </path>
+                </svg>
+                    <p class="text-sm font-bold text-gray-600 cursor-pointer xlite">Gen XLITE</p>
+            </div>
+        </p>
         <!-- Log Out -->
         <a href="#" class="logout">
             <div class="flex items-center justify-start m-2 gap-5 hover:bg-gray-200 px-2 py-5">
